--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -216,14 +216,12 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ROY_Marie/Maps/SideScroller
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
 
@@ -241,9 +239,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=1080.000 Y=330.000
-WindowSize=X=1284.000 Y=724.000
-InitiallyMaximized=True
+ScreenPosition=X=200.000 Y=59.333
+WindowSize=X=1208.000 Y=726.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -259,7 +257,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Exercice_UE5_JV2A_ROY_Marie/UE5_Rendu_ROY_Marie/Content/ROY_Marie/Maps
+UNR=E:/Exercice_UE5_JV2A_ROY_Marie/UE5_Rendu_ROY_Marie/SideScroller_JV2A_ROY_Marie/Content/ROY_Marie/Maps
 BRUSH=E:/Devoir_JV2A_ROY/Devoir/Content/
 FBX=E:/Devoir_JV2A_ROY/Devoir/Content/
 FBXAnim=E:/Devoir_JV2A_ROY/Devoir/Content/
@@ -1331,6 +1329,8 @@ Voice.TimeStamp=2024.01.31-12.32.03
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2024.01.31-12.31.58
 MovieSceneCapture.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2024.01.31-12.31.56
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1344,9 +1344,7 @@ MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
 MRUItem1=/Game/ROY_Marie/Blueprints/BP_RespownDead
 MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem3=/Game/ROY_Marie/Maps/SideScroller
-MRUItem4=/Game/ROY_Marie/Blueprints/KillZVolume_Blueprint
-MRUItem5=/Game/ROY_Marie/Blueprints/BP_PlayerDead
-MRUItem6=/Game/ROY_Marie/StarterContent/Maps/Minimal_Default
+MRUItem4=/Game/ROY_Marie/StarterContent/Maps/Minimal_Default
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1953,6 +1951,9 @@ MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 UMGEditorProjectSettings.Designer =True
 K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
 
 [DetailCategoriesAdvanced]
 BP_ThirdPersonCharacter_C.Actor=True
@@ -2033,7 +2034,7 @@ GraphEditorQuickJumps=()
 
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Lens.Lens
-BrushComponent=PostProcessVolume.Lens.Lens
+BrushComponent=
 StaticMeshActor=PostProcessVolume.Lens.Lens
 KillZVolume=PostProcessVolume.Lens.Lens
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Restart
@@ -2167,9 +2168,9 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BoxComponent="\"Object.Shape.ShapeColor\" "
 ShapeComponent="\"Object.Shape.ShapeColor\" "
-PrimitiveComponent="\"Object.Shape.ShapeColor\" "
-SceneComponent="\"Object.Shape.ShapeColor\" "
-ActorComponent="\"Object.Shape.ShapeColor\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 Object=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
